# open-voice-activity-detection

./: .gitignore  README.md  open_vad.code-workspace  pyproject.toml
debug/: validate_silero_imp.ipynb
examples/: basic_realtime_vad.ipynb
src/open_vad/: __init__.py  decoder.py  encoder.py  encoder_block.py  silero_vad.py  silero_vad_block.py  stft.py  utils.py
test/: test_stft.py
